# faraday

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  demo.py  execution_daemon.py  massive_benchmark.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  test_eigsh.py  test_topo_solver.py
.github/workflows/: ci.yml  publish.yml
docs/: STUDIES.md
docs/arxiv/: paper.tex
docs/source/: api.rst  benchmarks.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  theory.rst
docs/source/theory/: banach-fixed-point.rst  god-tensor-theory.rst  hilbert-embedding.rst  hodge-decomposition.rst  maxwell-equations.rst  perron-frobenius-theorem.rst  persistent-homology.rst
docs/source/tutorials/: barcode_generation.rst  basic_fdfd.rst  god_tensor_workflow.rst  index.rst
experiments/: run_all_studies.py
faraday/: __init__.py  _types.py  barcode.py  benchmarking.py  cli.py  config.py  em_solver.py  exceptions.py  fdtd_runner.py  god_tensor.py  logging.py  manifold_projector.py  predict.py  topological_solver.py
figures/: all_studies_results.json
gcguard/: __init__.py  cli.py  core.py  envelope.py  score.py  visualize.py
gcguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runs/: FATAL_DIVERGENCE.md  convergence_log.jsonl  fdtd_log.jsonl  fdtd_transcript.csv  transcript.csv
runs/checkpoints/: burn_checkpoint.npz  burn_checkpoint_gt.pkl
tests/: __init__.py  test_benchmarking_extended.py  test_cli_config.py  test_core.py  test_em_solver_analytic.py  test_em_solver_extended.py  test_god_tensor.py  test_predict_benchmark.py  test_property_based.py  test_spectral_fixed_point.py  test_topological_solver.py
