[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcguard"
version = "0.1.0"
description = "Gaussian Containment Guard — EM field confinement via Gaussian envelope functions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gcguard contributors"}
]
keywords = ["electromagnetics", "fdtd", "fdfd", "field-confinement", "gaussian", "photonics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.scripts]
gcguard = "gcguard.cli:main"

[project.urls]
Homepage = "https://github.com/teerthsharma/agentic-dream-gcguard"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
