[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faraday"
version = "0.1.0"
description = "Computational Faraday Tensor: discover the unified E x H field coupling via topology-fixed-point projection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Teerth Sharma"}]
keywords = ["electromagnetics", "maxwell", "faraday-tensor", "topology", "manifold", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "ripser>=0.6",
    "persim>=0.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["faraday*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
